# kedro-azureml

./: .bumpversion.cfg  .codeclimate.yml  .copier-answers.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .spellcheck.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  asf  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/actions/e2e_test/: action.yml
.github/actions/sonarcloud/: action.yml
.github/actions/update_check_run/: action.yml
.github/workflows/: codeql-analysis.yml  ok-to-test.yml  prepare-release.yml  publish.yml  python-package.yml  spellcheck.yml  test.yml  tests.yml  tests_and_publish.yml
dev-utils/: run_e2e_tests.sh
docs/: conf.py  index.rst  requirements.txt  spellcheck_exceptions.txt
docs/source/: 01_intro.md  02_installation.md  03_quickstart.md  03_quickstart.rst  04_data_assets.rst  04_development.md  04_mlflow.rst  05_data_assets.rst
kedro_azureml/: __init__.py  cli.py  cli_functions.py  client.py  config.py  constants.py  datasets.py  generator.py  hooks.py  manager.py  runner.py  utils.py
kedro_azureml/auth/: utils.py
kedro_azureml/datasets/: __init__.py  asset_dataset.py  file_dataset.py  folder_dataset.py  pandas_dataset.py  pipeline_dataset.py  runner_dataset.py  utils.py  v1_datasets.py
kedro_azureml/distributed/: __init__.py  config.py  decorators.py  utils.py
tests/: __init__.py  conftest.py  settings.py  test_cli.py  test_datasets.py  test_distributed.py  test_generator.py  test_hook.py  test_kedro_azureml.py  test_kedro_context_manager.py  test_runner.py  test_utils.py  utils.py
tests/conf/base/: azureml.yml
tests/conf/e2e/: azureml.yml  catalog.yml
tests/conf/e2e_pipeline_data_passing/: azureml.yml  catalog.yml  starter-config.yml
tests/helpers/: on_job_scheduled_helper.py
tests/job_schedule_callback/: existing_module.py
