[tool.poetry]
name = "kedro-azureml"
version = "0.4.1"
description = "Kedro plugin with Azure ML Pipelines support"
readme = "README.md"
authors = ['marcin.zablocki <marcin.zablocki@getindata.com>']
maintainers = ['GetInData MLOPS <mlops@getindata.com>']
homepage = "https://github.com/getindata/kedro-azureml"
repository = "https://github.com/getindata/kedro-azureml"
documentation = "https://kedro-azureml.readthedocs.io/"
keywords = ['kedro', 'mlops', 'azureml', 'machinelearning']
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta", # license and python versions added automatically
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.isort]
known_third_party = ["azure", "tabulate", "pydantic","semver","setuptools"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kedro = ">=0.18.5,<0.19.0"
cloudpickle = "^2.1.0"
adlfs = ">=2022.2.0"
azure-ai-ml = ">=1.2.0"
azureml-mlflow = { version = ">=1.42.0", optional = true}
pydantic = "~=1.9.1"
mlflow = {version = "^1.27.0", optional = true}
backoff = "^2.2.1"
azure-core = ">=1.26.1"
azureml-core = "^1.49.0"
azureml-dataset-runtime = "^1.49.0"
kedro-datasets = ">=1.0.0"

[tool.poetry.extras]
mlflow = ["azureml-mlflow", "mlflow"]

[tool.poetry.dev-dependencies]
pytest = "<7"
pytest-cov = ">=2.8.0, <4.0.0"
tox = ">=3.25.1"
pre-commit = "2.20.0"
numpy = "1.23.1"
pandas = "^1.4.3"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."kedro.project_commands"]
"azureml" = "kedro_azureml.cli:commands"
